# ray_tracing_asteroid_simulator

./: .gitignore  CMakeLists.txt  README.md  develop_log.md
.cache/clangd/index/: AO_calcu.cpp.6608E364433C0625.idx  AO_calcu.h.A69AC3F24948598D.idx  AsciiTable.h.AAFF4B4923A5887A.idx  BinTable.h.4645F3AEE48EF48C.idx  CCfits.3293A521BBB100EB.idx  CCfits.h.B43B41924EB8999E.idx  Column.h.D271772358FB9B99.idx  ColumnData.h.C0BA4EA9B0F85A82.idx  ColumnT.h.1FEDE5B53CE53286.idx  ColumnVectorData.h.EBF8DD683AF9C02E.idx  ExtHDU.h.7DE0EE57B1F25CC1.idx  ExtHDUT.h.1552FC27CA798F37.idx  FITS.h.0A73638A4CA4DA83.idx  FITSUtil.h.8E79D0DF268094F8.idx  FITSUtilT.h.391B7B4CED10CB2D.idx  FitsError.h.0158F3AF5003DDBE.idx  GroupTable.h.27DB515AE2B3675E.idx  HDU.h.A156E41891B28685.idx  HDUCreator.h.C27CD3A189066CBF.idx  Image.h.A63714DEA30EAA98.idx  ImageExt.h.7BF8F37F947977D1.idx  KeyData.h.2DA61BCBCD0B72E8.idx  Keyword.h.60FF58B0622A043E.idx  KeywordCreator.h.376AF0C2569FD93F.idx  KeywordT.h.6279DB4E22604A27.idx  NewKeyword.h.40CAB1CB3523A31E.idx  PHDU.h.525B063CD1B99BA2.idx  PHDUT.h.0088E73716BD00B3.idx  PrimaryHDU.h.7C24EF5A99C84CBA.idx  Table.h.3E623DE5B9F27E51.idx  _kiss_fft_guts.h.6FA325D23B0C77EE.idx  _kiss_fft_guts.h.CFA238DFE238EB33.idx  bright_calcu.cpp.36D9145FCE804DCC.idx  bright_calcu.h.429F23F2E42CFEA5.idx  bright_calcu_jet.h.F3C62A7C35D66277.idx  bright_calcu_test.cpp.3602B53E45EE8D0C.idx  ceres_test.cpp.870988E4B1B0BB7D.idx  common.cpp.A37B53B6FB46F859.idx  common.h.D1987CE782859EEE.idx  damit2obj.cpp.3E8F06C3C2EC9609.idx  (+23 more)
3dpart/CCFtis/lib/CCfits/: libCCfits.la
3dpart/CCFtis/lib/CCfits/pkgconfig/: CCfits.pc
3dpart/CCFtis/lib/cfitsio/: libcfitsio.so.10
3dpart/CCFtis/lib/cfitsio/pkgconfig/: cfitsio.pc
include/: AO_calcu.h  BVH.h  bright_calcu.h  bright_calcu_jet.h  common.h  damit2obj.h  damit_obj_converter.h  obj_loader.h
src/: AO_calcu.cpp  BVH.cpp  bright_calcu.cpp  common.cpp  damit2obj.cpp  damit_obj_converter.cpp  hello_g2o.cpp  monkey_head_bvh_pt_test.txt  monkey_head_bvh_test.txt  obj_loader.cpp  test.pgm
test/: BVH_test.cpp  bright_calcu_test.cpp  ceres_test.cpp  damit2obj.cpp  damit_obj_converter_test.cpp  hello_g2o.cpp  monkey_head_bvh_test.txt  monkey_head_test.pgm  period_scan.cpp  test_jet.cpp  visibility_test.cpp
test_data/: 135.lc  ariadne.lc  ariadne_shape.txt  ariadne_with_sim.lc  lcout.txt  monkey.mtl  monkey.stl  outshape.txt  outshape.txt.001  outshape.txt.002  outshape.txt.005  outshape.txt.007  outshape.txt.009  outshape.txt.011  outshape.txt.013  outshape.txt.015  outshape.txt.017  outshape.txt.020  outshape.txt.021  outshape.txt.024  outshape.txt.026  outshape.txt.028  outshape.txt.030  outshape.txt.037  param_1  state.txt  test.ipynb  tmp.txt  visiable_test.stl
tmp/: tmp.txt
